# django_course_project

./: README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
fixtures/: auth.json  blog.json  client.json  logs.json  mailing.json  message.json
mailing/: admin.py  forms.py  models.py  servicies.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_remove_log_client.py  0003_alter_log_status.py  0004_alter_mailing_options_client_author_mailing_author_and_more.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  log_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  main.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: footer.html  menu.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_status_alter_user_country_and_more.py
users/templates/users/: login.html  user_confirm_delete.html  user_detail.html  user_form.html  user_list.html  user_register_form.html
