[tool.poetry]
name = "django-course-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
django-apscheduler = "^0.6.2"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
django = "^4.2"
pillow = "^10.3.0"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
